syntax = "proto3";

package users;

option go_package = "github.com/OrIX219/SomethingSocial/internal/posts";

service PostsService {
  rpc GetUserPostsCount(GetUserPostsCountRequest) returns (GetUserPostsCountResponse) {}
}

message GetUserPostsCountRequest {
  int64 user_id = 1;
}

message GetUserPostsCountResponse {
  int64 count = 1;
}